# larder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
core/: Cargo.toml
core/src/: db.rs  lib.rs  seed.rs
core/src/models/: cookbook.rs  ingredient.rs  meal_plan.rs  mod.rs  recipe.rs  shopping_list.rs  tag.rs  user.rs
core/src/services/: cookbook.rs  cost.rs  export.rs  import.rs  meal_plan.rs  mod.rs  recipe.rs  scaling.rs  shopping_list.rs  tag.rs  user.rs
migrations/: 001_initial_schema.sql  002_costs_and_pricing.sql
server/: Cargo.toml
server/src/: main.rs
server/src/middleware/: mod.rs
server/src/routes/: cookbooks.rs  export.rs  import.rs  meal_plans.rs  mod.rs  prep_sheet.rs  recipes.rs  shopping.rs  tags.rs
server/src/static/: index.html
tui/: Cargo.toml
tui/src/: app_mode.rs  main.rs
tui/src/commands/: cli.rs
tui/src/ui/: dashboard.rs  editor.rs  help.rs  import.rs  meal_plan.rs  mod.rs  recipe_detail.rs  recipe_list.rs  shopping_list.rs  status_bar.rs
