[package]
name = "larder-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
scraper.workspace = true
rust_decimal.workspace = true
strum.workspace = true
