[package]
name = "larder-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API and web UI"

[dependencies]
larder-core = { path = "../core" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
axum-extra.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true
