[package]
name = "larder-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI and CLI"

[[bin]]
name = "larder-tui"
path = "src/main.rs"

[[bin]]
name = "larder"
path = "src/commands/cli.rs"

[dependencies]
larder-core = { path = "../core" }
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
color-eyre.workspace = true
strum.workspace = true
anyhow.workspace = true
rand = "0.8"
